--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,17 @@
 
 /* Your CSS Code here. */
+.holder {
+	width:100%;
+	height:40%;
+	display:flex;
+	flex-direction:row;
+	justify-content:center;
+	flex-wrap:wrap;
+}
+.item-1{
+	border:1px solid green;
+	background-color:green;
+    width:25%;
+	height:100%;
+	font-size:60px;	
+}
